--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,17 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
-  width: 1200px;
+  max-width: 480px;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .link {
@@ -184,10 +194,16 @@ body {
   padding: 25px 0;
   font-family: raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.167;
   color: #000;
   text-decoration: none;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .logo__element {
   color: #2196f3;
@@ -407,17 +423,76 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  margin-left: auto;
-  margin-right: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .footer__section {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__section {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    text-align: left;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .footer__block:not(:last-child) {
-  margin-right: 93px;
+  margin-bottom: 60px;
 }
-.footer__block:first-child {
-  margin-right: 70px;
+@media screen and (min-width: 768px) {
+  .footer__block:first-child {
+    margin-left: 76px;
+    margin-right: auto;
+  }
+  .footer__block:nth-child(2) {
+    margin-left: 0;
+    margin-right: 89px;
+  }
+  .footer__block:last-child {
+    margin-left: 166px;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__block {
+    margin-bottom: 0;
+  }
+  .footer__block:not(:last-child) {
+    margin-right: 93px;
+    margin-bottom: 0;
+  }
+  .footer__block:first-child {
+    margin-right: 70px;
+    margin-left: 0;
+  }
+  .footer__block:last-child {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 .footer__title {
   margin-bottom: 20px;
@@ -426,25 +501,34 @@ body {
   text-transform: uppercase;
   color: #fff;
 }
-.footer__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .footer__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
-.footer__item:not(:last-child) {
-  margin-right: 10px;
+@media screen and (min-width: 1200px) {
+  .footer__item:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 .footer__icon--ml-10 {
   margin-left: 10px;
 }
 .footer__form {
-  width: 570px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 450px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    width: 570px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 .footer__input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   padding: 15px;
   background-color: #2f303a;
@@ -458,6 +542,11 @@ body {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    width: 358px;
+  }
+}
 .footer__input:focus-visible {
   outline: none;
   border-color: #fff;
@@ -466,11 +555,16 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
-  margin-left: auto;
+  margin-top: 20px;
   width: 200px;
   height: 50px;
   padding: 10px 28px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__button {
+    margin: 0;
+    margin-left: auto;
+  }
 }
 .footer__button:hover, .footer__button:focus {
   -webkit-box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.15);
@@ -486,7 +580,13 @@ body {
   margin-top: 20px;
 }
 .address__list {
+  text-align: center;
   width: 231px;
+}
+@media screen and (min-width: 1200px) {
+  .address__list {
+    text-align: left;
+  }
 }
 .address__item:not(:last-child) {
   margin-bottom: 9px;
@@ -501,11 +601,11 @@ body {
 }
 
 .section-hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   position: relative;
-  width: 1600px;
-  height: 600px;
+  width: 480px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/index/hero-bg.jpg");
@@ -515,18 +615,38 @@ body {
   background-position: center;
   background-size: cover;
 }
+@media screen and (min-width: 768px) {
+  .section-hero {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+    height: 600px;
+  }
+}
 .section-hero__title {
-  width: 686px;
+  width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
+  font-size: 26px;
+  line-height: 1.62;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #fff;
+}
+@media screen and (min-width: 1200px) {
+  .section-hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .modal {
@@ -689,51 +809,115 @@ body {
 }
 
 .section-feature {
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section-feature {
+    padding-top: 94px;
+    padding-bottom: 0;
+  }
 }
 .section-feature__list {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .section-feature__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-feature__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+.section-feature__item {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .section-feature__item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    margin-right: 30px;
+  }
+  .section-feature__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .section-feature__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-feature__item {
+    margin-bottom: 0;
+    -ms-flex-preferred-size: content;
+        flex-basis: content;
+  }
+  .section-feature__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+.section-feature__block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-.section-feature__item {
-  margin-right: 30px;
-}
-.section-feature__item:last-child {
-  margin-right: 0;
-}
-.section-feature__img {
-  width: 270px;
-  height: 120px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 25px 100px 25px 100px;
-  background-color: #f5f4fa;
+  max-width: 450px;
+  height: 120px;
   border-radius: 4px;
   margin-bottom: 30px;
+  background-color: #f5f4fa;
+}
+@media screen and (min-width: 768px) {
+  .section-feature__block {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-feature__block {
+    width: 270px;
+  }
+}
+.section-feature__img {
+  height: 70px;
+  width: 70px;
 }
 .section-feature__title {
+  text-align: center;
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
 }
+@media screen and (min-width: 1200px) {
+  .section-feature__title {
+    text-align: left;
+  }
+}
 .section-feature__text {
-  width: 270px;
   line-height: 1.71;
   color: #757575;
 }
 
 .section-work {
+  display: none;
   padding-top: 94px;
   padding-bottom: 94px;
+}
+@media screen and (min-width: 1200px) {
+  .section-work {
+    display: block;
+  }
 }
 .section-work__title {
   text-align: center;
@@ -776,36 +960,101 @@ body {
 }
 
 .section-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #f5f4fa;
+}
+@media screen and (min-width: 1200px) {
+  .section-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .section-team__title {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666;
+  font-size: 28px;
+  line-height: 1.1785;
   color: #212121;
 }
+@media screen and (min-width: 1200px) {
+  .section-team__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.1666;
+  }
+}
 .section-team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .section-team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 .section-team__item {
+  margin-bottom: 30px;
   position: relative;
   background-color: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.section-team__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .section-team__item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+    margin-right: 30px;
+  }
+  .section-team__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .section-team__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-team__item:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 30px;
+  }
+}
+.section-team__img {
+  width: 450px;
+}
+@media screen and (min-width: 768px) {
+  .section-team__img {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-team__img {
+    width: 270px;
+  }
 }
 .section-team__cell {
-  padding: 30px 0;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 1200px) {
+  .section-team__cell {
+    padding-bottom: 30px;
+  }
 }
 .section-team__subtitle {
   margin-bottom: 10px;
@@ -822,27 +1071,48 @@ body {
 }
 
 .section-clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .section-clients__title {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666;
+  font-size: 28px;
+  line-height: 1.1785;
   color: #212121;
+}
+@media screen and (min-width: 1200px) {
+  .section-clients__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.1666;
+  }
 }
 .section-clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .section-clients__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 .section-clients__item {
   display: -webkit-box;
@@ -854,9 +1124,34 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-.section-clients__item:not(:last-child) {
   margin-right: 30px;
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 767px) {
+  .section-clients__item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+.section-clients__item:nth-last-child(-n+2) {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .section-clients__item {
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
+  }
+  .section-clients__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .section-clients__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-clients__item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
 }
 .section-clients__link {
   display: -webkit-box;
@@ -868,7 +1163,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   color: #afb1b8;
   border: 1px solid #afb1b8;
@@ -879,6 +1174,16 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 678px) {
+  .section-clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-clients__link {
+    width: 170px;
+  }
 }
 .section-clients__link:hover, .section-clients__link:focus {
   color: #2196f3;
