--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -10,5 +10,15 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 0 15px;
-    width: 1200px;
+    max-width: 480px;
+
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        max-width: 1200px;
+    }
+
+
 }
