--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,10 +4,17 @@
 
     font-family: $font-secondary;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.167;
     color: $color-black;
     text-decoration: none;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 1.19;
+    }
+        
+
 
     &__element {
         color: $color-accent;
