--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -1,5 +1,10 @@
 .section-work {
+    display: none;
      @include section-padd (94px, 94px);
+        
+     @media screen and (min-width: 1200px) {
+            display: block;
+    }
 
      &__title {
         text-align: center;
