--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
-  max-width: 480px;
+  min-width: 480px;
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -165,6 +165,11 @@ body {
           animation-fill-mode: forwards;
   opacity: 0;
 }
+@media screen and (max-width: 767px) {
+  .link--current::after {
+    display: none;
+  }
+}
 
 /* Анимация подчеркивания */
 @-webkit-keyframes underline-in {
@@ -190,8 +195,8 @@ body {
   }
 }
 .logo {
-  margin-right: 93px;
-  padding: 25px 0;
+  margin-right: auto;
+  padding: 16px 0;
   font-family: raleway, sans-serif;
   font-weight: 700;
   font-size: 24px;
@@ -201,8 +206,10 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .logo {
+    margin-right: 93px;
     font-size: 26px;
     line-height: 1.19;
+    padding: 25px 0;
   }
 }
 .logo__element {
@@ -291,6 +298,34 @@ body {
   color: #2196f3;
 }
 
+.menu-toggle {
+  display: block;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  border: 0;
+  color: #212121;
+  background-color: inherit;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-toggle:hover, .menu-toggle:focus {
+  color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
 .social-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -351,11 +386,16 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 80px;
+  height: 60px;
   border-bottom: 1px solid #ececec;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    height: 80px;
+  }
 }
 .header__list {
   display: -webkit-box;
@@ -366,10 +406,36 @@ body {
           align-items: center;
   margin-left: auto;
 }
+@media screen and (max-width: 767px) {
+  .header__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-bottom: 64px;
+  }
+}
 .header__item {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .header__item {
+    color: #2196f3;
+    font-size: 34px;
+    line-height: 1.176;
+    margin-bottom: 32px;
+  }
+  .header__item:not(:last-child) {
+    color: #757575;
+    font-size: 24px;
+    line-height: 1.166;
+    margin: 0;
+  }
 }
 .header__item:not(:last-child) {
   margin-right: 50px;
@@ -384,21 +450,53 @@ body {
   color: #757575;
   padding: 32px 0;
 }
+@media screen and (max-width: 767px) {
+  .header__link {
+    padding: 0;
+    color: currentColor;
+  }
+}
 .header__icon {
   width: 16px;
   height: 12px;
   margin-right: 10px;
   fill: currentColor;
 }
+@media screen and (max-width: 767px) {
+  .header__icon {
+    display: none;
+  }
+}
 .header__icon--smartphone {
   width: 10px;
   height: 16px;
+}
+
+.mobile-nav {
+  display: block;
+}
+@media screen and (min-width: 1200px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+.tablet-nav {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .tablet-nav {
+    display: block;
+  }
 }
 
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .nav__list {
   display: -webkit-box;
@@ -408,11 +506,105 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 767px) {
+  .nav__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    margin-bottom: 302px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .nav__item {
+    font-size: 40px;
+    line-height: 1.175;
+  }
+}
 .nav__item:not(:last-child) {
   margin-right: 50px;
 }
+@media screen and (max-width: 767px) {
+  .nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
 .nav__link {
   padding: 32px 0;
+}
+@media screen and (max-width: 767px) {
+  .nav__link {
+    padding: 0;
+  }
+}
+
+.menu-toggle__icon {
+  width: 40px;
+  height: 40px;
+  fill: currentColor;
+  background-color: inherit;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #fff;
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.mobile-social__item {
+  position: relative;
+  font-size: 18px;
+  line-height: 1.222;
+  color: #2196f3;
+}
+.mobile-social__item:not(:last-child) {
+  margin-right: 20px;
+}
+.mobile-social__item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  display: block;
+  height: 100%;
+  width: 1px;
+  background-color: #757575;
+  right: -10px;
+  top: 0%;
 }
 
 .footer {
@@ -604,7 +796,7 @@ body {
   padding-top: 118px;
   padding-bottom: 118px;
   position: relative;
-  width: 480px;
+  max-width: 480px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -617,7 +809,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .section-hero {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -653,8 +845,8 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 528px;
-  min-height: 581px;
+  min-width: 450px;
+  min-height: 609px;
   padding: 40px;
   background-color: #fff;
   -webkit-transform: translate(-50%, -50%) scale(1);
@@ -663,6 +855,12 @@ body {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 .backdrop.is-hidden .modal {
   -webkit-transform: translate(-50%, -50%) scale(1.1);
@@ -673,6 +871,11 @@ body {
   font-size: 20px;
   text-align: center;
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.5;
+  }
 }
 .modal__group {
   margin-bottom: 20px;
@@ -798,9 +1001,15 @@ body {
 }
 
 .policy {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.667;
   color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .policy {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .policy__link {
   -webkit-text-decoration-line: underline;
