--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -78,5 +78,26 @@
 }
 
 
+.menu-toggle {
+    display: block;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    border: 0;
+    color: $color-primary;
+    background-color: inherit;
+    transition: color $cubic;
+        &:hover,
+        &:focus {
+            color: $color-accent;
+        }
 
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+}
 
