--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -10,7 +10,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 0 15px;
-    max-width: 480px;
+    min-width: 480px;
+
+
 
     @media screen and (min-width: 768px) {
         max-width: 768px;
