--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,14 +3,19 @@
     top: 50%;
     left: 50%;
 
-    min-width: 528px;
-    min-height: 581px;
+    min-width: 450px;
+    min-height: 609px;
     padding: 40px;
 
     background-color: $color-white;
     transform: translate(-50%, -50%) scale(1);
 
     transition: transform $cubic;
+
+    @media screen and (min-width: 1200px) {
+            min-width: 528px;
+            min-height: 581px;
+    }
 
     .backdrop.is-hidden & {
         transform: translate(-50%, -50%) scale(1.1);
@@ -24,6 +29,11 @@
         font-size: 20px;
         text-align: center;
         margin-bottom: 12px;
+        
+        @media screen and (min-width: 1200px) {
+            line-height: 1.5;
+        }
+
     }
 
 
@@ -139,9 +149,14 @@
 }
 
 .policy {
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.667;
     color: $color-secondary;
+
+    @media screen and (min-width: 1200px) {
+    font-size: 14px;
+        line-height: 1.71;
+    }
       
     
     &__link {
