--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,19 +1,43 @@
 .header {
     display: flex;
-    height: 80px;
+    height: 60px;
     border-bottom: 1px solid $horizontal-line-color;
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
 
+    @media screen and (min-width: 1200px) {
+                height: 80px;
+
+        }
+
+
     &__list {
         display: flex;
         align-items: center;
         margin-left: auto;
+        @media screen and (max-width: 767px) {
+            flex-direction: column-reverse;
+            align-items: flex-start;
+            margin-bottom: 64px;
+        }
     }
 
     &__item {
         align-items: center;
+        @media screen and (max-width: 767px) {
+
+                color: $color-accent;
+                font-size: 34px;
+                line-height: 1.176;
+                margin-bottom: 32px;
+                &:not(:last-child) {
+                    color: $color-secondary;
+                    font-size: 24px;
+                    line-height: 1.166;
+                    margin: 0;
+                }
+            }
     }
 
     &__item:not(:last-child) {
@@ -25,6 +49,10 @@
         align-items: center;
         color: $color-secondary;
         padding: 32px 0;
+            @media screen and (max-width: 767px) {
+                padding: 0;
+                color: currentColor;
+            }
     }
         
 
@@ -34,6 +62,10 @@
         margin-right: 10px;
     
         fill: currentColor;
+
+        @media screen and (max-width: 767px) {
+            display: none;
+        }
     }
 
     &__icon--smartphone {
@@ -43,19 +75,60 @@
     
 }
 
+.mobile-nav {
+    display: block;
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+}
+
+
+.tablet-nav {
+    display: none;
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
+}
+
 .nav {
     display: flex;
+    align-items: center;
+
      
     &__list {
             display: flex;
             align-items: center;
 
+        @media screen and (max-width: 767px) {
+            flex-direction: column;
+            align-items: baseline;
+            margin-bottom: 302px;
+        }
+
     }
+    &__item {
+        @media screen and (max-width: 767px) {
+            
+            
+            font-size: 40px;
+            line-height: 1.175;
+
+        }
+    }
+
     &__item:not(:last-child) {
             margin-right: 50px;
+@media screen and (max-width: 767px) {
+            margin-bottom: 32px;}
         }
     &__link {
             padding: 32px 0;
+            @media screen and (max-width: 767px) {
+                padding: 0;
+             
+            }
         }
 }
 
