--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -2,7 +2,7 @@
     @include section-padd (118px, 118px);
 
     position: relative;
-    width: 480px;
+    max-width: 480px;
     height: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -14,7 +14,7 @@
     background-size: cover;
 
     @media screen and (min-width: 768px) {
-        width: 768px;
+        max-width: 768px;
     }
 
     @media screen and (min-width: 1200px) {
