--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "./components/button";
 @import "./components/social-list";
 @import "./components/page-header";
+@import "./components/mobile-header";
 @import "./components/page-footer";
 @import "./components/section-hero";
 @import "./components/modal";
