--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,11 @@ a {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 479px) {
+  .checkbox__checker-icon {
+    width: 22px;
+  }
+}
 .checkbox--none:checked + .checkbox__checker-icon {
   border-color: #2196f3;
   background-color: #2196f3;
@@ -119,7 +124,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
-  width: 480px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -485,6 +495,11 @@ body {
   color: #757575;
   padding: 32px 0;
 }
+@media screen and (max-width: 479px) {
+  .header__link {
+    font-size: 24px;
+  }
+}
 @media screen and (max-width: 767px) {
   .header__link {
     padding: 0;
@@ -612,6 +627,11 @@ body {
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
 }
+@media screen and (max-width: 479px) {
+  .menu-container {
+    padding: 48px 20px;
+  }
+}
 @media screen and (min-width: 768px) {
   .menu-container {
     display: none;
@@ -630,6 +650,7 @@ body {
 }
 
 .mobile-menu {
+  width: 100%;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -646,6 +667,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 479px) {
+  .mobile-social {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 .mobile-social__item {
   position: relative;
@@ -703,6 +730,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+@media screen and (max-width: 479px) {
+  .footer__section {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   .footer__section {
@@ -786,7 +820,13 @@ body {
   margin-left: 10px;
 }
 .footer__form {
-  width: 450px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .footer__form {
+    display: block;
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__form {
@@ -797,7 +837,7 @@ body {
   }
 }
 .footer__input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding: 15px;
   background-color: #2f303a;
@@ -852,6 +892,12 @@ body {
   text-align: center;
   width: 231px;
 }
+@media screen and (max-width: 479px) {
+  .address__list {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 @media screen and (min-width: 1200px) {
   .address__list {
     text-align: left;
@@ -873,7 +919,7 @@ body {
   padding-top: 118px;
   padding-bottom: 118px;
   position: relative;
-  max-width: 480px;
+  min-width: 320px;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -928,7 +974,7 @@ body {
   }
 }
 .section-hero__title {
-  width: 360px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -952,9 +998,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 450px;
-  min-height: 609px;
+  width: calc(100% - 30px);
   padding: 40px;
+  min-height: 609px;
   background-color: #fff;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
@@ -963,10 +1009,16 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    padding: 40px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
-    min-width: 528px;
-    min-height: 581px;
+    width: 528px;
+    height: 581px;
   }
 }
 .backdrop.is-hidden .modal {
@@ -1144,6 +1196,8 @@ body {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1152,30 +1206,16 @@ body {
         flex-wrap: nowrap;
   }
 }
-.section-feature__item {
-  margin-bottom: 30px;
-}
 @media screen and (min-width: 768px) {
   .section-feature__item {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
-    margin-right: 30px;
-  }
-  .section-feature__item:nth-child(2n) {
-    margin-right: 0;
-  }
-  .section-feature__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .section-feature__item {
-    margin-bottom: 0;
     -ms-flex-preferred-size: content;
         flex-basis: content;
-  }
-  .section-feature__item:not(:last-child) {
-    margin-right: 30px;
   }
 }
 .section-feature__block {
@@ -1323,12 +1363,14 @@ body {
   }
 }
 .section-team__item {
-  margin-bottom: 30px;
   position: relative;
   background-color: #fff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+.section-team__item:not(:last-child) {
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .section-team__item {
@@ -1423,6 +1465,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
 }
 @media screen and (min-width: 1200px) {
   .section-clients__list {
@@ -1440,33 +1484,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  -ms-flex-preferred-size: calc(100% - 30px);
+      flex-basis: calc(100% - 30px);
 }
-@media screen and (max-width: 767px) {
-  .section-clients__item:nth-child(2n) {
-    margin-right: 0;
-  }
-}
-.section-clients__item:nth-last-child(-n+2) {
+.section-clients__item:last-child {
   margin-bottom: 0;
+}
+@media screen and (min-width: 480px) {
+  .section-clients__item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
+  }
 }
 @media screen and (min-width: 768px) {
   .section-clients__item {
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
-  }
-  .section-clients__item:nth-child(3n) {
-    margin-right: 0;
-  }
-  .section-clients__item:nth-last-child(-n+3) {
-    margin-bottom: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .section-clients__item:not(:last-child) {
-    margin-right: 30px;
-    margin-bottom: 0;
   }
 }
 .section-clients__link {
@@ -1491,7 +1524,7 @@ body {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 678px) {
+@media screen and (min-width: 768px) {
   .section-clients__link {
     width: 226px;
   }
@@ -1517,6 +1550,7 @@ body {
 .section-portfolio {
   padding-top: 60px;
   padding-bottom: 60px;
+  width: 100%;
 }
 @media screen and (min-width: 1200px) {
   .section-portfolio {
@@ -1662,6 +1696,12 @@ body {
   line-height: 1.56;
   padding: 63px 24px;
   color: #fff;
+}
+@media screen and (max-width: 479px) {
+  .grid__overlay-text {
+    font-size: 14px;
+    padding: 26px 24px;
+  }
 }
 .grid__discr {
   padding-top: 20px;
