--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -10,10 +10,12 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 0 15px;
+    width: 100%;
 
-    width: 480px;
 
-
+    @media screen and (min-width: 480px) {
+            width: 480px;
+        }
 
     @media screen and (min-width: 768px) {
         width: 768px;
