--- a/sass/components/_mobile-header.scss
+++ b/sass/components/_mobile-header.scss
@@ -23,6 +23,11 @@
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
 
+
+    @media screen and (max-width: 479px) {
+        padding: 48px 20px;
+    }
+
     @media screen and (min-width: 768px) {
         display: none;
     }
@@ -39,6 +44,7 @@
 }
 
 .mobile-menu {
+    width: 100%;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -49,6 +55,10 @@
 }
 .mobile-social {
     display: flex;
+        @media screen and (max-width: 479px) {
+        flex-wrap: wrap;
+        }
+    
      
 
     &__item {
@@ -58,6 +68,8 @@
         line-height: 1.222;
         color:$color-accent;
    
+
+
 
         &:not(:last-child) {
             margin-right: 20px;
@@ -74,6 +86,9 @@
         }
         
     }
+    
+       
+
         @media screen and (min-width: 768px) {
             display: none;
         }
