--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,19 +2,32 @@
     position: absolute;
     top: 50%;
     left: 50%;
-
-    min-width: 450px;
-    min-height: 609px;
+    width: calc(100% - 30px);
+    // padding: 35px 15px;
     padding: 40px;
+    
+    min-height: 609px;
+    
 
     background-color: $color-white;
     transform: translate(-50%, -50%) scale(1);
 
     transition: transform $cubic;
 
+    @media screen and (min-width: 400px) {
+            
+            // padding: 35px 30px;
+        }
+
+
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        padding: 40px;
+    }
+
     @media screen and (min-width: 1200px) {
-            min-width: 528px;
-            min-height: 581px;
+            width: 528px;
+            height: 581px;
     }
 
     .backdrop.is-hidden & {
