--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -9,6 +9,12 @@
         text-align: center;
         flex-direction: column;
 
+        @media screen and (max-width: 479px) {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         @media screen and (min-width: 768px) {
             align-items: baseline;
             flex-direction: row;
@@ -101,11 +107,17 @@
     }
 
     &__form {
-        width: 450px;
+        width: 100%;
 
+
+        @media screen and (min-width: 480px) {
+            display: block;
+            width: 450px;
+            
+                    }
         @media screen and (min-width: 1200px) {
         width: 570px;
-        display: flex; 
+        display: flex;
         }
 
 
@@ -113,7 +125,7 @@
  
 
     &__input {
-        width: 450px;
+        width: 100%;
         height: 50px;
         padding: 15px;
         background-color: $bg-color-footer;
@@ -170,10 +182,16 @@
 .address {
     font-style: normal;
     margin-top: 20px;
+    
 
     &__list {
         text-align: center;
         width: 231px;
+
+        @media screen and (max-width: 479px) {
+                margin-left: auto;
+                margin-right: auto;
+            }
 
         @media screen and (min-width: 1200px) {
             text-align: left;
