--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -74,6 +74,10 @@
         align-items: center;
         color: $color-secondary;
         padding: 32px 0;
+            @media screen and (max-width: 479px) {
+                font-size: 24px
+            }
+
             @media screen and (max-width: 767px) {
                 padding: 0;
                 color: currentColor;
