--- a/sass/components/_section-clients.scss
+++ b/sass/components/_section-clients.scss
@@ -27,6 +27,8 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        grid-column-gap: 30px;
+        grid-row-gap: 30px;
 
         @media screen and (min-width: 1200px) {
             flex-wrap: nowrap;
@@ -37,35 +39,22 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-right: 30px;
-        margin-bottom: 30px;
+
         
-        @media screen and (max-width: 767px) {
-            &:nth-child(2n) {
-                margin-right: 0;
-            }
-        }
-        &:nth-last-child(-n + 2) {
+        flex-basis: calc((100% / 1) - 30px);
+        &:last-child {
             margin-bottom: 0;
         }
 
-        @media screen and (min-width: 768px) {
-            flex-basis: calc((100% / 3) - 30px);
 
-            &:nth-child(3n) {
-                margin-right: 0;
-            }
-
-            &:nth-last-child(-n + 3) {
-                margin-bottom: 0;
-            }
+        @media screen and (min-width: 480px) {
+            flex-basis: calc((100% / 2) - 30px);
+            
         }
 
-        @media screen and (min-width: 1200px) {
-            &:not(:last-child) {
-                margin-right: 30px;
-                margin-bottom: 0;
-            }
+
+        @media screen and (min-width: 768px) {
+            flex-basis: calc((100% / 3) - 30px);
         }
     }
     
@@ -84,7 +73,7 @@
         transition: box-shadow $cubic, border-color $cubic, color $cubic,
         transform $cubic;
 
-        @media screen and (min-width: 678px) {
+        @media screen and (min-width: 768px) {
             width: 226px;
         }
         @media screen and (min-width: 1200px) {
