--- a/sass/components/_section-feature.scss
+++ b/sass/components/_section-feature.scss
@@ -7,10 +7,13 @@
 
     &__list {
         display: block;
+        
 
         @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
+            grid-column-gap: 30px;
+            grid-row-gap: 30px;
         }
 
         @media screen and (min-width: 1200px) {
@@ -19,30 +22,20 @@
 
     }
     &__item {
-        margin-bottom: 30px;
+
 
         @media screen and (min-width: 768px) {
             flex-basis: calc((100% / 2) - 30px);
-            margin-right: 30px;
 
-            &:nth-child(2n) {
-                    margin-right: 0;
-                }
-            &:nth-last-child(-n + 2) {
-                margin-bottom: 0;
-            }
         }
         @media screen and (min-width: 1200px) {
-            margin-bottom: 0;
+
             flex-basis: content;
-            &:not(:last-child) {
-                margin-right: 30px;
-            
-     }
+
+
+        }
 
     }
-
-}
     &__block {
         display: flex;
         justify-content: center;
