--- a/sass/components/_section-portfolio.scss
+++ b/sass/components/_section-portfolio.scss
@@ -1,5 +1,7 @@
 .section-portfolio {
+
     @include section-padd (60px, 60px);
+    width: 100%;
     
         @media screen and (min-width: 1200px) {
             @include section-padd (94px, 94px);
@@ -143,6 +145,12 @@
         line-height: 1.56;
         padding: 63px 24px;
         color: $color-white;
+
+        @media screen and (max-width: 479px) {
+            font-size: 14px;
+            padding: 26px 24px;
+        }
+
     }
 
     &__discr {
